--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
@@ -70,7 +70,7 @@
                         <h3>篩選 <i class="fa-solid fa-grip-lines-vertical"></i></h3>
 
                         
-                        <div class="w-50" style="text-align:end">商品排序</div>
+                        <div class="w-25" style="text-align:end">商品排序</div>
                         <div class="shop-filter-select ">
                             <select id="selOrder" class="form-select form-select-md" aria-label="排序方式">
                                 <option value="0" selected>無</option>
@@ -100,7 +100,7 @@
                         </div>
                     </div>
                     <div class="d-flex text-center align-items-center justify-content-between">
-                        <span> 共 @ViewBag.ProductCount 項商品</span>
+                        <span>共<span style="font-size:large;color:red"> @ViewBag.ProductCount </span>項商品</span>
                         <div class="filter">
                             <span>顯示</span>
                             <div class="shop-filter-select">
