--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
@@ -192,7 +192,7 @@
                         </div>
 
                         <div class="form-group">
-                            <button type="submit" class="mt-3 btn btn-primary btn-block" name="btnSend" id=" btnSend"
+                        <button type="submit" class="mt-3 btn btn-primary btn-block btnSend" id="btnSend"
                                     style="width: 50%;">
                                 發送
                             </button>
@@ -227,7 +227,7 @@
     </div>
     <!---篩選類別-->
     <div style="margin-left:20px">
-        <button class="btn btn-primary" id="selectAllBtn">全選</button>
+        <button class="btn btn-primary selectAllBtn" id="selectAllBtn">全選</button>
     </div>
     <div class="container-fluid mt-4">
         <div class="row">
@@ -401,8 +401,8 @@
                     }
                     },
                     {
-                    data: null,
-                    render: function (data, type, row, meta) {
+                    "data": null,
+                    "render": function (data, type, row, meta) {
                         return `<input class="form-check-input-lg row-checkbox" type="checkbox" data-id="${row.productId}">`;
                     }
                     },
@@ -732,68 +732,103 @@
         });
         //發送商品至會員==============================================
         $(document).ready(function () {
-            var selectedids = [];
-            var selectedProductId = null;
+             var selectedProductId = null;
+              var selectedids = [];
+
 
             // 全選及單選按鈕的點擊事件
-            $(document).ready(function () {
-                var selectedids = [];
-                var selectedProductId = null;
 
-                $('#selectAllBtn, #GProduct-table tbody').on('change', '.row-checkbox', function () {
-                    var isChecked = $(this).is(':checked');
-                    var $row = $(this).closest('tr');
-                    var idValue = $(this).data('id');
+            $('#selectAllBtn').on('click', function () {
+                var $checkboxes = $('.row-checkbox');
+                var isCheckedAll = $checkboxes.not(':checked').length === 0;
 
-                    if (isChecked) {
-                        $row.find('td').addClass('selected-cell');
-                        selectedids.push(idValue);
-                    } else {
-                        $row.find('td').removeClass('selected-cell');
-                        var index = selectedids.indexOf(idValue);
-                        if (index !== -1) {
-                            selectedids.splice(index, 1);
-                        }
-                    }
+                if (isCheckedAll) {
+                    $checkboxes.prop('checked', false);
+                    selectedids = [];
+                    selectedProductId = null;
+                } else {
+                    $checkboxes.prop('checked', true);
+                    selectedids = $checkboxes.map(function () {
+                        return $(this).data('id');
+                    }).get();
+                    selectedProductId = selectedids.length > 0 ? selectedids[0] : null;
+                }
 
-                    selectedProductId = isChecked ? idValue : null;
-                    console.log('選擇的商品id:', selectedids);
-                });
-
-                // 发送按钮点击事件
-                $('#btnSend').on('click', function () {
-                    var memberId = $("#sent-memberID").val();
-                    console.log('memberId:', memberId);
-                    console.log('selectedProductId:', selectedProductId);
-
-                    if (selectedProductId !== null && memberId !== "") {
-                        $.ajax({
-                            url: "/AdminCMS/GameProduct/SendProductToMemberByID",
-                            type: "POST",
-                            data: { id: selectedProductId, memberId: memberId },
-                            success: function (response) {
-                                if (response.success) {
-                                    console.log("發送成功");
-                                    $('#sendtoMember').modal('hide');
-                                } else {
-                                    console.log("發送失败");
-                                }
-                            },
-                            error: function (error) {
-                                console.log("發生錯誤：", error);
-                            }
-                        });
-                    }
-                });
-
-                // 補發遊戲商品按钮点击事件
-                $('#sendtoMemberModalBtn').on('click', function () {
-                    if (selectedProductId !== null) {
-                        $("#sent-memberID").val(selectedProductId);
-                        $('#sendtoMember').modal('show');
-                    }
-                });
+                console.log('選擇的商品id:', selectedids);
             });
+
+            $('#selectAllBtn, #GProduct-table tbody').on('change', '.row-checkbox', function () {
+                var isChecked = $(this).is(':checked');
+                var $row = $(this).closest('tr');
+                var idValue = $(this).data('id');
+
+                if (isChecked) {
+                    $row.find('td').addClass('selected-cell');
+                    selectedids.push(idValue);
+                    selectedProductId = idValue;
+                } else {
+                    $row.find('td').removeClass('selected-cell');
+                    var index = selectedids.indexOf(idValue);
+                    if (index !== -1) {
+                        selectedids.splice(index, 1);
+                    }
+                    if (selectedProductId === idValue) {
+                        selectedProductId = null;
+                    }
+                }
+
+                console.log('選擇的商品id:', selectedids);
+            });
+
+
+            // 補發遊戲商品=======================================
+            $('#sendtoMemberModalBtn').on('click', function () {
+                var memberId = $("#sent-memberID").val();
+                if (memberId !== "") {
+                    $('#sendtoMember').modal('show');
+                }
+            });
+            // 發送按鈕
+            $('#btnSend').on('click', function () {
+                var memberId = $("#sent-memberID").val();
+                console.log('memberId:', memberId);
+                console.log('selectedids:', selectedids);
+
+                if (selectedids.length > 0 && memberId !== "") {
+                    $.ajax({
+                        url: "/AdminCMS/GameProduct/SendProductsToMemberByID",
+                        type: "POST",
+                        data: { ids: selectedids, memberId: memberId },
+                        success: function (response) {
+                            if (response.success) {
+                                Swal.fire({
+                                    icon: 'success',
+                                    title: '發送成功',
+                                    text: '商品已成功發送至會員。',
+                                }).then(function () {
+                                    $('#sendtoMember').modal('hide');
+                                });
+                            } else {
+                                Swal.fire({
+                                    icon: 'error',
+                                    title: '發送失敗',
+                                    text: '商品發送失敗，請再次確認。',
+                                });
+                            }
+                        },
+                        error: function (error) {
+                            console.log("發生錯誤：", error);
+                            Swal.fire({
+                                icon: 'error',
+                                title: '發送錯誤',
+                                text: '商品發送錯誤，請再次確認。',
+                            });
+                        }
+                    });
+                }
+            });
+
         });
+
     </script>
 }
