-新增 遊戲說明頁碼及頁首&內容

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/Mainstyle.css
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/wwwroot/css/game/Mainstyle.css
@@ -1,4 +1,47 @@
- .result-container {
+/* CSS部分：樣式可以根據需要自訂 */
+#tutorial-container {
+    padding: 20px;
+}
+#closetutorial {
+    position: absolute;
+    margin-left: 120px;
+    margin-top: 55px;
+}
+.page {
+    display: none;
+    border: 4px solid blanchedalmond;
+    padding: 10px;
+    margin-bottom: 10px;
+    color: aqua;
+    margin-top: 50px;
+    border-radius: 15px;
+    height: 400px;
+    background-color: wheat;
+}
+
+    .page.active {
+        display: block;
+    }
+
+.pagination-dots-container {
+    display: flex;
+    justify-content: center;
+}
+
+.dot {
+    width: 10px;
+    height: 10px;
+    background-color: #ccc;
+    border-radius: 50%;
+    margin: 0 5px;
+    cursor: pointer;
+}
+
+    .dot.active {
+        background-color: #17a2b8; /* 活躍狀態的顏色 */
+    }
+
+.result-container {
         grid-template-columns: repeat(5, 75px);
         grid-template-rows: 100px 100px 50px; /* 注意這裡第三行高度為 50px */
         padding-top: 150px;
