--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -212,17 +212,51 @@
 
         <!-- End 獲得物品確認視窗 -->
         <!-- Start Canvas遊戲畫布 -->
-       
+
         <div id="tutorial">
             <div id="tutorial-container">
-             <button id="commonbackBTN" style="top:20px !important;" onclick="pagesControl(Canvaslobby)"></button>
-                <div class="tutorial-pagination">
-                    <span class="dot active" ></span>
-                    <span class="dot"></span>
-                    <span class="dot"></span>
-                    <span class="dot"></span>
-                    <span class="dot"></span>
-                    <span class="dot"></span>
+                <!-- 返回鍵 -->
+                <button id="closetutorial" class=" btn-secondary" onclick="">x</button>
+                <button id="commonbackBTN" style="top:20px !important;" onclick="pagesControl(Canvaslobby)"></button>
+                <div class="content-container">
+                    <div id="page1" class="page active">
+                        <!-- 第1頁的內容 -->
+                        <h1>第一頁</h1>
+                        <p>這是第一頁的內容。</p>
+                    </div>
+                    <div id="page2" class="page">
+                        <!-- 第2頁的內容 -->
+                        <h1>第二頁</h1>
+                        <p>這是第二頁的內容。</p>
+                    </div>
+                    <div id="page3" class="page">
+                        <!-- 第3頁的內容 -->
+                        <h1>第三頁</h1>
+                        <p>這是第三頁的內容。</p>
+                    </div>
+                    <div id="page4" class="page">
+                        <!-- 第4頁的內容 -->
+                        <h1>第四頁</h1>
+                        <p>這是第四頁的內容。</p>
+                    </div>
+                    <div id="page5" class="page">
+                        <!-- 第5頁的內容 -->
+                        <h1>第五頁</h1>
+                        <p>這是第五頁的內容。</p>
+                    </div>
+                    <div id="page6" class="page">
+                        <!-- 第6頁的內容 -->
+                        <h1>第六頁</h1>
+                        <p>這是第六頁的內容。</p>
+                    </div>
+                </div>
+                <div class="pagination-dots-container">
+                    <span class="dot" onclick="handleDotClick(1)"></span>
+                    <span class="dot" onclick="handleDotClick(2)"></span>
+                    <span class="dot" onclick="handleDotClick(3)"></span>
+                    <span class="dot" onclick="handleDotClick(4)"></span>
+                    <span class="dot" onclick="handleDotClick(5)"></span>
+                    <span class="dot" onclick="handleDotClick(6)"></span>
                 </div>
             </div>
         </div>
