--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/GameProduct/GameProduct.cshtml
@@ -60,7 +60,7 @@
 
     <div class="row mt-3">
         <div class="col-6 offset-6 text-end">
-            <button class="btn btn-success" data-bs-toggle="modal" href="#sendtoMember" role="button" id="sendtoMemberModalBtn">
+            <button type="submit" class="btn btn-success" data-bs-toggle="modal"  role="button" id="sendtoMemberModalBtn">
                 補發遊戲商品
             </button>
         </div>
@@ -188,16 +188,26 @@
                 <div class="row">
                         <div class="form-group">
                             <label>會員編號</label>
-                            <input type="text" class="form-control" id="sent-memberID" name="MemberID">
+                            <input type="text" class="form-control" id="send-memberID" name="MemberID">
                         </div>
 
+                    <div class="col">
                         <div class="form-group">
-                        <button type="submit" class="mt-3 btn btn-primary btn-block btnSend" id="btnSend"
-                                    style="width: 50%;">
+                            <button type="submit" class="mt-3 btn btn-primary btn-block btnSend" id="btnSend" style="width: 50%;">
                                 發送
                             </button>
-                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col">
+                        <div class="form-group">
+                            <button type="button" class="mt-3 btn btn-secondary btn-block" id="clearMemberID">
+                                清除
+                            </button>
+                        </div>
+                    </div>
                 </div>
+
 
             </div>
             <!--內容表單-->
@@ -432,13 +442,13 @@
                 ],
              //類別篩選
             columnDefs: [
-                { targets: 2, searchable: true },  //第三欄，索引2
+                { targets: 4, searchable: true },  //第五欄，索引4
             ],
             });
         //篩選功能=====================
             $('#categoryList').on('change', function () {
                 var filterOption1 = $(this).val();
-                table.column(2).search(filterOption1).draw();
+                table.column(4).search(filterOption1).draw();
             });
         //編輯============================================
             $('#GProduct-table').on('click', '.edit-button', function () {
@@ -783,14 +793,28 @@
 
             // 補發遊戲商品=======================================
             $('#sendtoMemberModalBtn').on('click', function () {
-                var memberId = $("#sent-memberID").val();
-                if (memberId !== "") {
+                var memberId = $("#send-memberID").val();
+                var shouldShowModal = selectedids.length > 0;
+
+                if (!shouldShowModal) {
+                    console.log('未選擇商品或會員ID為空');
+                    Swal.fire({
+                        icon: 'error',
+                        title: '您未選擇商品',
+                        text: '請先選擇要發送的商品',
+                    });
+                }
+
+                $('#sendtoMemberModalBtn').attr('href', shouldShowModal ? '#sendtoMember' : '');
+                if (shouldShowModal) {
                     $('#sendtoMember').modal('show');
                 }
             });
+
+
             // 發送按鈕
             $('#btnSend').on('click', function () {
-                var memberId = $("#sent-memberID").val();
+                var memberId = $("#send-memberID").val();
                 console.log('memberId:', memberId);
                 console.log('selectedids:', selectedids);
 
@@ -811,8 +835,8 @@
                             } else {
                                 Swal.fire({
                                     icon: 'error',
-                                    title: '發送失敗',
-                                    text: '商品發送失敗，請再次確認。',
+                                    title: '未輸入會員編號或會員編號不存在',
+                                    text: '請輸入正確的會員編號。',
                                 });
                             }
                         },
@@ -825,9 +849,20 @@
                             });
                         }
                     });
+                } else {
+                    Swal.fire({
+                        icon: 'error',
+                        title: '未輸入會員編號或會員編號不存在',
+                        text: '請輸入正確的會員編號。',
+                    });
                 }
             });
+        });
 
+
+        //清除鍵
+        $('#clearMemberID').on('click', function () {
+            $('#send-memberID').val(''); // 清空输入框的值
         });
 
     </script>
