連結至熱賣.全新商品

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Shop.cshtml
@@ -37,7 +37,7 @@
     <div class="container">
         <div class="title-all text-left">
             <!--增加:Start當前分類-->
-            <h1 id="categoryTitle" data-category-name="@ViewBag.CategoryName"></h1>
+            <h1 id="categoryTitle" data-category-name="@ViewBag.CategoryName" data-order-by="@ViewBag.OrderBy"></h1>
         </div>
         <!--增加:End當前分類-->
         <div id="categoryList" class="row">
