--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Index/Index.cshtml
@@ -177,7 +177,7 @@
                 <div class="round-box-title">熱賣商品</div>
                 <div class="round-box-custome offer-box-products">
                     <img class="text-center rounded-circle img-fluid" src="~/images/hot.png" alt="" />
-                    <a asp-controller="Index" asp-action="Shop">
+                    <a href="/Index/Shop?orderBy=1">
                         <div class="mask rounded-circle">
                         </div>
                     </a>
@@ -189,7 +189,7 @@
                 <div class="round-box-title">貓咪玩具</div>
                 <div class="round-box-custome offer-box-products">
                     <img class="text-center rounded-circle img-fluid" src="~/images/toy.png" alt="" />
-                    <a asp-controller="Index" asp-action="Shop">
+                    <a href="/Index/Shop?categoryName=玩具">
                         <div class="mask rounded-circle">
                         </div>
                     </a>
@@ -200,7 +200,7 @@
                 <div class="round-box-title">保健食品</div>
                 <div class="round-box-custome offer-box-products">
                     <img class="text-center rounded-circle img-fluid" src="~/images/supplement.png" alt="" />
-                    <a asp-controller="Index" asp-action="Shop">
+                    <a href="/Index/Shop?categoryName=保健食品">
                         <div class="mask rounded-circle">
                         </div>
                     </a>
@@ -218,7 +218,7 @@
                 <div class="home-section-title">
                     <h2>新進商品!</h2>
 
-                    <a asp-controller="Index" asp-action="Shop">
+                    <a href="/Index/Shop?orderBy=3">
                         <span>瀏覽所有新商品</span>
                     </a>
                 </div>
@@ -291,7 +291,7 @@
             <div class="col-lg-12">
                 <div class="home-section-title">
                     <h2>熱賣商品!</h2>
-                    <a asp-controller="Index" asp-action="Shop">
+                    <a href="/Index/Shop?orderBy=1">
                         <span>瀏覽所有熱賣商品</span>
                     </a>
                 </div>
