更新: 每日任務現在會跟遊戲機制連動，也同步更新到資料庫 / 跨午夜之後登入會重置每日任務 TODO: 領取獎勵機制

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -317,7 +317,7 @@
 
 <button type="submit" id="testDBlogin" style="display:none">測試資料庫登入</button>
 
-
+<button type="submit" id="testTask"  >測試進行任務</button>
 <div id="sidebar">
     <div id="sidebar-inside">
         <div class="toggle">
