--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/CMSHome/Login.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Areas/AdminCMS/Views/CMSHome/Login.cshtml
@@ -42,44 +42,39 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-10 col-xl-8 col-lg-9 col-md-8 col-sm-10">
-                <div class="card border-0" style="box-shadow: 0 1rem 3rem rgba(0, 0, 0, .175) !important;overflow: hidden;margin-top: 15rem;">
-                    <div class="card-body p-0">
-                        <div class="row">
-                            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
-                            <div class="col-lg-6">
-                                <div class="login-right-card p-3 m-5">
-                                    <div class="text-center">
-                                        <h1 class="h4 text-gray-900 mb-4">管理員登入</h1>
-                                    </div>
-                                    <form id="loginForm" method="post" action="/AdminCMS/CMSHome/Login" onsubmit="return validateForm()">
-                                        <div class="user">
-                                            <div class="form-group mb-4">
-                                                <input type="text" name="AdminAccount" class="form-control form-control-user" id="InputEmail" value="catcha" aria-describedby="emailHelp" placeholder="帳號" style="border-radius: 30px;">
-                                            </div>
-                                            <div class="form-group mb-4">
-                                                <div class="password-container">
-                                                    <input type="password" name="AdminPassword" class="form-control form-control-user" value="catcha123" id="InputPassword" placeholder="密碼" style="border-radius: 30px;">
-                                                    <span id="togglePassword" class="toggle-password"><i class="fas fa-eye"></i></span>
-                                                </div>
-                                            </div>
-                                            <button type="submit" id="loginButton" class="btn btn-primary btn-user btn-block"
-                                                    style="width: 100%;border-radius: 30px;">
-                                                登入
-                                            </button>
-                                        </div>
-                                    </form>
-                                    <p id="errorMsg" style="color:red;"></p>
-                                    @if (!string.IsNullOrEmpty(ViewBag.ErrorMessage))
-                                    {
-                                        <p id="ViewBag_ErrorMessage" style="color:red;">@ViewBag.ErrorMessage</p>
-                                    }
-                                </div>
-                            </div>
+
+    <div class="container d-flex justify-content-center align-items-center vh-100">
+        <div class="row col-8 bg-white">
+            <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+            <div class="col-lg-6">
+                <!-- 右側區塊 -->
+                    <div class="login-right-card p-3 m-5">
+                        <div class="text-center">
+                            <h1 class="h4 text-gray-900 mb-4">管理員登入</h1>
                         </div>
-                    </div>
+                        <form id="loginForm" method="post" action="/AdminCMS/CMSHome/Login" onsubmit="return validateForm()">
+                            <div class="user">
+                                <div class="form-group mb-4">
+                                    <input type="text" name="AdminAccount" class="form-control form-control-user" id="InputEmail" value="catcha" aria-describedby="emailHelp" placeholder="帳號" style="border-radius: 30px;">
+                                </div>
+                                <div class="form-group mb-4">
+                                    <div class="password-container">
+                                        <input type="password" name="AdminPassword" class="form-control form-control-user" value="catcha123" id="InputPassword" placeholder="密碼" style="border-radius: 30px;">
+                                        <span id="togglePassword" class="toggle-password"><i class="fas fa-eye"></i></span>
+                                    </div>
+                                </div>
+                                <button type="submit" id="loginButton" class="btn btn-primary btn-user btn-block"
+                                        style="width: 100%;border-radius: 30px;">
+                                    登入
+                                </button>
+                            </div>
+                        </form>
+                        <p id="errorMsg" style="color:red;"></p>
+                        @if (!string.IsNullOrEmpty(ViewBag.ErrorMessage))
+                        {
+                            <p id="ViewBag_ErrorMessage" style="color:red;">@ViewBag.ErrorMessage</p>
+                        }
+                    <!--右側區塊-->
                 </div>
             </div>
         </div>
